# HekaDrop

./: .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.en.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  RUST_GUIDELINE.md  SECURITY.en.md  SECURITY.md  build.rs  deny.toml  typos.toml
.cargo/: mutants.toml
.clusterfuzzlite/: Dockerfile  build.sh
.githooks/: pre-commit
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: afl.yml  audit.yml  bench.yml  ci.yml  clusterfuzzlite.yml  coverage.yml  deny.yml  docs.yml  fuzz.yml  mutants.yml  release.yml
Casks/: hekadrop.rb
afl/: .gitignore  Cargo.toml
afl/src/: afl_frame_decode.rs  afl_secure_decrypt.rs  afl_ukey2_client_init.rs
crates/hekadrop-app/: Cargo.toml  build.rs
crates/hekadrop-app/benches/: crypto.rs
crates/hekadrop-app/fuzz/: Cargo.toml  README.md
crates/hekadrop-app/fuzz/fuzz_targets/: fuzz_secure_decrypt.rs  fuzz_ukey2_handshake_init.rs
crates/hekadrop-app/src/: config.rs  connection.rs  crypto.rs  discovery.rs  error.rs  frame.rs  i18n.rs  identity.rs  lib.rs  main.rs  mdns.rs  paths.rs  payload.rs  platform.rs  secure.rs  sender.rs  server.rs  settings.rs  state.rs  stats.rs  ui.rs  ui_adapter.rs
crates/hekadrop-app/tests/: cancel_per_transfer.rs  file_metadata_size_guard.rs  folder_chunk_hmac_resume.rs  folder_receiver_extract.rs  folder_sender_send.rs  folder_ui_integration.rs  frame_codec.rs  frame_limits.rs  hmac_tag_length.rs  legacy_ttl.rs  mdns_discovery.rs  payload_corrupt.rs  privacy_controls.rs  rate_limiter.rs  resume_e2e.rs  resume_meta_persist.rs  save_non_blocking.rs  secure_roundtrip.rs  server_rate_limiter.rs  settings_migration.rs  trust_hijack.rs  ukey2_downgrade.rs  ukey2_handshake.rs
crates/hekadrop-app/tests/common/: mod.rs
crates/hekadrop-cli/: Cargo.toml
crates/hekadrop-cli/src/: bootstrap.rs  main.rs  paths.rs  terminal.rs
crates/hekadrop-core/: Cargo.toml
crates/hekadrop-core/src/: capabilities.rs  chunk_hmac.rs  config.rs  connection.rs  crypto.rs  discovery_types.rs  error.rs  file_size_guard.rs  frame.rs  identity.rs  lib.rs  log_redact.rs  negotiation.rs  payload.rs  resume.rs  secure.rs  sender.rs  server.rs  settings.rs  state.rs  stats.rs  ui_port.rs  ukey2.rs
crates/hekadrop-core/src/folder/: bundle.rs  enumerate.rs  extract.rs  manifest.rs  mod.rs  sanitize.rs
crates/hekadrop-core/tests/: proptests.rs
crates/hekadrop-net/: Cargo.toml
crates/hekadrop-net/src/: discovery.rs  lib.rs  mdns.rs
crates/hekadrop-proto/: Cargo.toml  build.rs
crates/hekadrop-proto/proto/: hekadrop_extensions.proto
crates/hekadrop-proto/src/: lib.rs
docs/: MILESTONES.md  ROADMAP.md  architecture.md  dependency-policy.md  features-audit.md
docs/deploy/: com.sourvice.hekadrop-cli.plist  hekadrop-cli.service  windows-service.md
docs/design/: 017-trusted-id-hardening.md
docs/protocol/: README.md  capabilities.md  chunk-hmac.md  folder-payload.md  resume.md
docs/rfcs/: 0000-template.md  0001-workspace-refactor.md  0002-url-payload.md  0003-chunk-hmac.md  0004-transfer-resume.md  0005-folder-payload.md  README.md
docs/security/: audit-scope.md  fuzzing.md  threat-model.md
fuzz/: .gitignore  Cargo.toml
fuzz/fuzz_targets/: fuzz_chunk_hmac.rs  fuzz_endpoint_info.rs  fuzz_frame_decode.rs  fuzz_payload_assembler.rs  fuzz_payload_header.rs  fuzz_protobuf_frames.rs  fuzz_resume_meta.rs  fuzz_secure_decrypt.rs  fuzz_ukey2_client_finish.rs  fuzz_ukey2_client_init.rs
oss-fuzz/: Dockerfile  build.sh  project.yaml
resources/: Info.plist  com.sourvice.hekadrop.plist  hekadrop.desktop  window.html
scoop/: hekadrop.json
scripts/: build-universal.sh  bundle.sh  install-linux.sh  make-deb.sh  make-dmg.sh  make-icon.sh  uninstall-linux.sh
src/: config.rs  connection.rs  crypto.rs  discovery.rs  error.rs  file_size_guard.rs  frame.rs  i18n.rs  identity.rs  lib.rs  log_redact.rs  main.rs  mdns.rs  payload.rs  platform.rs  secure.rs  sender.rs  server.rs  settings.rs  state.rs  stats.rs  ui.rs  ukey2.rs
src/connection/: consent.rs  errors.rs  frames.rs  mod.rs  request.rs  sanitize.rs  sharing.rs
supply-chain/: audits.toml  config.toml
tests/: cancel_per_transfer.rs  hmac_tag_length.rs  legacy_ttl.rs  privacy_controls.rs  rate_limiter.rs  save_non_blocking.rs  secure_roundtrip.rs  server_rate_limiter.rs  trust_hijack.rs  ukey2_downgrade.rs  ukey2_handshake.rs
tests/common/: mod.rs
