[workspace]
resolver = "2"
members = ["crates/hekadrop-app", "crates/hekadrop-cli", "crates/hekadrop-core", "crates/hekadrop-net", "crates/hekadrop-proto"]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.90"
authors = ["destek@sourvice.com"]
license = "MIT"
repository = "https://github.com/YatogamiRaito/HekaDrop"
homepage = "https://github.com/YatogamiRaito/HekaDrop"

# ─────────────────────────────────────────────────────────────────────────────
# Workspace-wide lint policy
# ─────────────────────────────────────────────────────────────────────────────
# Felsefe: enforceable lint set. Burada listelenen her lint, mevcut codebase'de
# 0 violation üretir; yeni kod bu disiplini bozarsa CI (-D warnings) kırılır.
#
# Kapsam dışı bırakılanlar (RED-tier — ayrı tracking issue'larla cleanup):
#   * clippy::pedantic umbrella (~1,228 hit)        — issue #TBD
#   * clippy::must_use_candidate (71 hand)          — issue #TBD
#   * unused_crate_dependencies                     — false-pos cascade, atlandı
#
# v0.7.x ile enforce edilenler (önceki "RED" listesinden):
#   * clippy::cast_possible_wrap (36)               — PR #101 audit + enforce
#   * clippy::uninlined_format_args (auto-fix +110) — PR #105 enforce
#   * unreachable_pub (workspace refactor sonrası 58 hit) — bu PR cleanup + enforce
#
# Konsensus referans: Embark, uv, ruff. Top-tier (tokio/ripgrep/rustls/hyper)
# minimal config tercih ediyor; biz crypto/protocol surface taşıyan bir desktop
# app olduğumuz için Embark-tier'a daha yakın duruyoruz.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
# Public API hijyeni — pub item bir tüketici tarafından erişilemiyorsa
# pub(crate)'e dönmeli. Workspace refactor (Adım 5) sonrası app→core
# split ile çoğu mu eski-pub items pub(crate) olabilir hâle geldi.
# PR #87'de 349 hit'tən refactor sonrası 58'e düştü; cleanup + enforce.
unreachable_pub = "warn"

[workspace.lints.clippy]
# Ship-blocker'lar — production'a sızmamalı
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
exit = "warn"
# Korumalı paniği zorla — unwrap/expect/panic prod'da yasak; testte allow'lu
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Numerik güvenlik — silent truncation/overflow tespiti
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"     # cast_wrap audit PR'ı sonrası enforce — 15 hit fix'lendi
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"
# unsafe disiplini — her unsafe block "// SAFETY:" ister
undocumented_unsafe_blocks = "warn"
missing_safety_doc = "warn"
# Embark/uv/ruff konsensus — security ve correctness sinyali güçlü
rc_mutex = "warn"
mem_forget = "warn"
map_err_ignore = "warn"
empty_drop = "warn"
get_unwrap = "warn"
redundant_clone = "warn"
use_self = "warn"
# Kalite — düşük volüm, anlık temizlik
doc_markdown = "warn"           # PR #110: 648 hit, 242 auto-fix + 406 generated proto module-level allow
uninlined_format_args = "warn"  # PR #87 auto-fix sonrası 110 yeni site birikmişti; auto-fix tekrar uygulandı + lint enforce
match_same_arms = "warn"        # i18n table + 2 dokümantasyon arm scoped allow ile (PR #87 deferred)
manual_let_else = "warn"
ignored_unit_patterns = "warn"
trivially_copy_pass_by_ref = "warn"
single_match_else = "warn"
default_trait_access = "warn"
large_enum_variant = "warn"

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# debug = 1 → line tables only (minimal debuginfo). Windows release build'inin
# .pdb üretmesi için gerekli; `strip = true` ile symbol table'dan arındırılsa da
# `split-debuginfo = "packed"` dbg info'yu ayrı pack'e alır ve crash/stack trace
# kalitesini yükseltir. Binary boyut maliyeti ~200 KB.
debug = 1
split-debuginfo = "packed"
