[workspace]
resolver = "2"
members = ["crates/hekadrop-app", "crates/hekadrop-cli", "crates/hekadrop-core", "crates/hekadrop-net", "crates/hekadrop-proto"]

[workspace.package]
version = "0.7.0"
edition = "2021"
rust-version = "1.90"
authors = ["destek@sourvice.com"]
license = "MIT"
repository = "https://github.com/YatogamiRaito/HekaDrop"
homepage = "https://github.com/YatogamiRaito/HekaDrop"

# ─────────────────────────────────────────────────────────────────────────────
# Workspace-wide lint policy
# ─────────────────────────────────────────────────────────────────────────────
# Felsefe: enforceable lint set. Burada listelenen her lint, mevcut codebase'de
# 0 violation üretir; yeni kod bu disiplini bozarsa CI (-D warnings) kırılır.
#
# Kapsam dışı bırakılanlar (RED-tier — ayrı tracking issue'larla cleanup):
#   * clippy::pedantic umbrella (~1,228 hit)        — issue #TBD
#   * unused_crate_dependencies                     — false-pos cascade, atlandı
#
# v0.7.x ile enforce edilenler (önceki "RED" listesinden):
#   * clippy::cast_possible_wrap (36)               — PR #101 audit + enforce
#   * clippy::uninlined_format_args (auto-fix +110) — PR #105 enforce
#   * unreachable_pub (workspace refactor sonrası 58 hit) — bu PR cleanup + enforce
#   * clippy::must_use_candidate (37 source + 170 generated proto) —
#     bu PR: source'larda #[must_use] ekleme + proto module-level allow
#     (generated `as_str_name` / `from_str_name` enum helper'ları)
#
# Konsensus referans: Embark, uv, ruff. Top-tier (tokio/ripgrep/rustls/hyper)
# minimal config tercih ediyor; biz crypto/protocol surface taşıyan bir desktop
# app olduğumuz için Embark-tier'a daha yakın duruyoruz.
[workspace.lints.rust]
unsafe_op_in_unsafe_fn = "deny"
trivial_casts = "warn"
trivial_numeric_casts = "warn"
single_use_lifetimes = "warn"
unused_lifetimes = "warn"
unused_macro_rules = "warn"
# Public API hijyeni — pub item bir tüketici tarafından erişilemiyorsa
# pub(crate)'e dönmeli. Workspace refactor (Adım 5) sonrası app→core
# split ile çoğu mu eski-pub items pub(crate) olabilir hâle geldi.
# PR #87'de 349 hit'tən refactor sonrası 58'e düştü; cleanup + enforce.
unreachable_pub = "warn"

[workspace.lints.clippy]
# Ship-blocker'lar — production'a sızmamalı
dbg_macro = "deny"
print_stdout = "warn"
print_stderr = "warn"
todo = "warn"
unimplemented = "warn"
exit = "warn"
# Korumalı paniği zorla — unwrap/expect/panic prod'da yasak; testte allow'lu
unwrap_used = "warn"
expect_used = "warn"
panic = "warn"
# Numerik güvenlik — silent truncation/overflow tespiti
cast_possible_truncation = "warn"
cast_possible_wrap = "warn"     # cast_wrap audit PR'ı sonrası enforce — 15 hit fix'lendi
cast_sign_loss = "warn"
cast_precision_loss = "warn"
cast_lossless = "warn"
# unsafe disiplini — her unsafe block "// SAFETY:" ister
undocumented_unsafe_blocks = "warn"
missing_safety_doc = "warn"
# Embark/uv/ruff konsensus — security ve correctness sinyali güçlü
rc_mutex = "warn"
mem_forget = "warn"
map_err_ignore = "warn"
empty_drop = "warn"
get_unwrap = "warn"
redundant_clone = "warn"
use_self = "warn"
# Kalite — düşük volüm, anlık temizlik
doc_markdown = "warn"           # PR #110: 648 hit, 242 auto-fix + 406 generated proto module-level allow
uninlined_format_args = "warn"  # PR #87 auto-fix sonrası 110 yeni site birikmişti; auto-fix tekrar uygulandı + lint enforce
match_same_arms = "warn"        # i18n table + 2 dokümantasyon arm scoped allow ile (PR #87 deferred)
manual_let_else = "warn"
ignored_unit_patterns = "warn"
trivially_copy_pass_by_ref = "warn"
single_match_else = "warn"
default_trait_access = "warn"
large_enum_variant = "warn"
must_use_candidate = "warn"     # API hijyeni: pure pub fn/method'lar `#[must_use]` ister; sonuç atılırsa caller bug. Bu PR: 37 source + proto generated module-level allow.
items_after_statements = "warn" # Block içinde item (fn/const/use) statement'lardan ÖNCE gelir; okunabilirlik + scope netliği. Bu PR: 7 site fix (const/use/inner-fn yukarı taşındı).
map_unwrap_or = "warn"          # `.map(f).unwrap_or(d)` → `.map_or(d, f)`; allocation/closure azalır, idiomatik. Bu PR: 13 site auto-fix (`cargo clippy --fix`).
# pedantic batch 1 — düşük-risk, davranış-koruyucu, mass-friendly (PR: chore/lint-pedantic-batch-1)
# Hepsi mevcut codebase'de 0 hit; refactor (RFC-0001) sonrası kademeli pedantic enforce.
redundant_else = "warn"         # `if { return } else {}` redundant else; control-flow netliği.
if_not_else = "warn"            # `if !cond { a } else { b }` → `if cond { b } else { a }`; pozitif okunabilirlik.
single_char_pattern = "warn"    # `s.split("a")` → `s.split('a')`; mikro-perf + idiomatic.
inefficient_to_string = "warn"  # `&T: Display` üzerinde `.to_string()` ekstra ref; format!() inline tercih.
needless_late_init = "warn"     # `let x; if {...} else {...}` → `let x = if {...} else {...}`; init-at-decl.
# pedantic batch 2 — closure / pattern micro-cleanups (PR: chore/lint-pedantic-batch-2)
# 17 hit auto-fix + 0 allow; davranış-koruyucu refactor.
redundant_closure_for_method_calls = "warn"  # 16 hit auto-fix: `|x| x.foo()` → `Foo::foo`; closure allocation azalır.
cloned_instead_of_copied = "warn"            # 0 hit; `.cloned()` Copy type üzerinde → `.copied()`; perf + clarity.
manual_string_new = "warn"                   # 0 hit; `String::from("")` → `String::new()`; idiomatic.
unnested_or_patterns = "warn"                # 1 hit auto-fix: `Foo(_) | Bar(_)` → `Foo(_) | Bar(_)` nested form.
flat_map_option = "warn"                     # 0 hit; `.flat_map(Option)` → `.filter_map`; intent netliği.
# pedantic batch 3 — düşük-risk auto-fix mikro-temizlik (PR: chore/lint-pedantic-batch-3)
# 5 hit auto-fix + 0 allow; davranış-koruyucu, formatting/idiom düzeyi.
semicolon_if_nothing_returned = "warn"  # 5 hit auto-fix (criterion bench `b.iter(|| ...)` trailing): fn body son statement `;` ile sonlanmalı, return-değeri olmayan call'lar tutarlılık için.
stable_sort_primitive = "warn"          # 0 hit; primitive slice `.sort()` → `.sort_unstable()`; perf.
checked_conversions = "warn"            # 0 hit; `i32 as u32` overflow-aware checked alternatif (`u32::try_from`).
ptr_as_ptr = "warn"                     # 0 hit; `*const T as *const U` → `.cast()`; pointer cast idiom.
ref_option_ref = "warn"                 # 0 hit; `&Option<&T>` redundant indirection — direkt `Option<&T>`.
# pedantic batch 4 — control-flow + iterator + collection idiom temizliği (PR: chore/lint-pedantic-batch-4)
# 3 hit manuel fix + 0 allow; davranış-koruyucu, control-flow netliği.
implicit_clone = "warn"                 # 0 hit; `.to_owned()` Clone tipinde → `.clone()`; intent netliği.
map_flatten = "warn"                    # 0 hit; `.map(...).flatten()` → `.flat_map(...)`; tek pass.
needless_continue = "warn"              # 3 hit manuel fix: match arm sonu `=> continue` → `=> {}` (sanitize.rs + settings.rs ×2); döngünün doğal akışı zaten devam ediyor.
manual_assert = "warn"                  # 0 hit; `if !cond { panic!(...) }` → `assert!(cond, ...)`; idiomatic.
range_minus_one = "warn"                # 0 hit; `0..(n-1)` → `0..=(n-2)`; inclusive range netliği.
# pedantic batch 5 — cast / option / iterator / import idiom temizliği (PR: chore/lint-pedantic-batch-5)
# 1 hit manuel fix + 0 allow; cast_lossless zaten yukarıda enforce (numerik güvenlik bloğunda).
option_option = "warn"                  # 0 hit; `Option<Option<T>>` antipattern — tristate için custom enum tercih.
naive_bytecount = "warn"                # 0 hit; `bytes.iter().filter(|&&b| b == X).count()` → `bytecount` crate (high-volume scan); ekstra dep gerekmiyor (0 hit).
needless_collect = "warn"               # 1 hit manuel fix: tests/folder_sender_send.rs `dirs: Vec<_> = ...collect(); dirs.len()` → `.count()`; ara Vec allocation gereksiz.
wildcard_imports = "warn"               # 0 hit; `use foo::*;` → explicit import; namespace netliği. (Test modüllerinde `use super::*;` zaten test-allow setine girer.)
# pedantic batch 6 — string-builder + struct + return-type idiom temizliği (PR: chore/lint-pedantic-batch-6)
# 1 hit manuel fix + 1 scoped allow (Settings serde wire format) + 3 zero-hit lint enable.
format_push_string = "warn"             # 1 hit manuel fix: `crates/hekadrop-app/src/main.rs::js_string` ctrl-char escape `out.push_str(&format!(...))` → `write!(out, ...)` (`std::fmt::Write`); ekstra String allocation eliminate.
manual_str_repeat = "warn"              # 0 hit; `(0..n).map(|_| s).collect::<String>()` → `s.repeat(n)`; idiomatic + tek allocation.
unnecessary_box_returns = "warn"        # 0 hit; `fn f() -> Box<T>` → `fn f() -> T`; ekstra heap indirection gereksizse direkt by-value.
struct_excessive_bools = "warn"         # 1 hit scoped allow: `crates/hekadrop-core/src/settings.rs::Settings` 5 bool field (auto_accept / advertise / keep_stats / disable_update_check / first_launch_completed). Her biri bağımsız user preference; flag enum / bitfield refactor'u serde JSON wire format kırar (config.json migration tabanı).
large_types_passed_by_value = "warn"    # 0 hit; büyük (>256 byte) type by-value parametre → `&T`; gereksiz move/copy.
# pedantic batch 7 — argument / pointer / visibility / binding / string idiom temizliği (PR: chore/lint-pedantic-batch-7)
# 1 hit manuel fix (no_effect_underscore_binding) + 4 zero-hit lint enable.
# NOT: `clippy::redundant_pub_crate` (58 hit) bu batch'ten KAPSAM-DIŞI bırakıldı.
# Hekadrop-app `lib.rs + main.rs` hibrit crate; `i18n/paths/platform/state/ui/ui_adapter`
# modülleri yalnız `main.rs`'in private modül ağacında ve `pub(crate)` kullanıyor.
# Auto-fix `pub`'a çevirmek istiyor — fakat workspace zaten `unreachable_pub = "warn"`
# enforce ediyor (yukarıda lints.rust); bu lint aynı item'ları tam tersi yönde
# (`pub` → `pub(crate)`) raporlar. İki lint uzlaşmaz; `redundant_pub_crate` enforce
# etmek için `unreachable_pub`'ı gevşetmek gerekir — refactor RFC-0001 sonrası
# yeniden değerlendirilecek.
needless_pass_by_ref_mut = "warn"           # 0 hit; `&mut T` argüman gerçekten mutate edilmiyorsa `&T`; immutability disiplini.
ref_as_ptr = "warn"                         # 0 hit; `&x as *const T` → `std::ptr::from_ref(&x)`; pointer cast idiom (Rust 1.76+).
no_effect_underscore_binding = "warn"       # 1 hit manuel fix: `crates/hekadrop-core/src/settings.rs::v06_reject_path_legacy_upgrade_yapmaz` test'inde `let _peer_hash = [0xCC; 6];` no-op binding (eski kodun ne yaptığını dökümante etmek için). Yorum bloğuna dönüştürüldü; `0xCC` literal aşağıdaki assertion'da zaten var.
needless_raw_string_hashes = "warn"         # 0 hit; `r#"..."#` raw string'de gereksiz `#` (string'de `"` yoksa); idiomatic.
# pedantic batch 8 — iterator / variant / call / derive / binding idiom temizliği (PR: chore/lint-pedantic-batch-8)
# 4 zero-hit lint enable + 1 generated-only (`derive_partial_eq_without_eq` — 6 hit prost-üretilmiş kodda;
# `crates/hekadrop-proto/src/lib.rs` her generated `pub mod` allow listesine eklendi, el yazımı kod 0 hit).
iter_without_into_iter = "warn"             # 0 hit; type `iter()` metoduna sahip ama `IntoIterator` impl etmemiş — for-loop ergonomi tutarsızlığı.
manual_is_variant_and = "warn"              # 0 hit; `.map_or(false, |x| x.foo())` → `.is_some_and(|x| x.foo())`; intent netliği.
or_fun_call = "warn"                        # 0 hit; `.unwrap_or(expensive())` → `.unwrap_or_else(|| ...)`; pahalı default lazy hesaplanır.
derive_partial_eq_without_eq = "warn"       # 6 hit yalnız prost-generated kodda (proto crate `lib.rs` allow listesinde); el yazımı kod 0 hit. Yeni `PartialEq` derive eden tip `Eq` da derive etmeli (float field yoksa).
ref_binding_to_reference = "warn"           # 0 hit; `if let Some(ref x) = &y` → `if let Some(x) = &y`; `&y` üzerinde `ref` redundant.
# pedantic batch 9 — iterator / literal / option / block / docs idiom temizliği (PR: chore/lint-pedantic-batch-9)
# 14 hit auto-fix (semicolon_outside_block) + 4 zero-hit lint enable; davranış-koruyucu formatting / micro-temizlik.
filter_map_next = "warn"                    # 0 hit; `.filter(p).next()` → `.find(p)`; intent netliği + tek pass.
char_lit_as_u8 = "warn"                     # 0 hit; `'a' as u8` → `b'a'`; byte literal idiom.
manual_ok_or = "warn"                       # 0 hit; `match x { Some(v) => Ok(v), None => Err(e) }` → `x.ok_or(e)`; idiomatic.
semicolon_outside_block = "warn"            # 14 hit auto-fix (`cargo clippy --fix`): `{ stmt; }` → `{ stmt };`; tek-statement bloklar için tutarlı formatting (app/main.rs cfg-gated `eprintln!` blokları + tests/resume_e2e.rs scope-drop blokları + connection.rs/payload.rs scope drop'ları).
doc_link_with_quotes = "warn"               # 0 hit; rustdoc link içinde gereksiz `"..."` quotes — direkt `[name]` referans.
# pedantic batch 10 — bool / late-init / hasher / duplicate-cond / ptr-cast idiom temizliği (PR: chore/lint-pedantic-batch-10)
# 6 hit auto-fix (`if_then_some_else_none`: `if c { Some(x) } else { None }` → `c.then(|| x)`) +
# 1 hit manuel fix (`implicit_hasher`: `cleanup_sweep` `&HashSet<(i64,i64)>` → generic `S: BuildHasher`) + 3 zero-hit lint enable.
if_then_some_else_none = "warn"             # 6 hit auto-fix (`cargo clippy --fix`): `if cond { Some(x) } else { None }` → `cond.then(|| x)` (lazy — equivalent semantics). Etki alanı: `crates/hekadrop-core/src/connection.rs` (3 site: stats snapshot keep gate + RESUME_V1 session_id gate), `crates/hekadrop-core/src/sender.rs` (2 site: send/send_text stats snapshot keep gate), `crates/hekadrop-app/tests/resume_e2e.rs` (1 site: RESUME_V1 capability test).
useless_let_if_seq = "warn"                 # 0 hit; `let x = a; if cond { x = b }` → `let x = if cond { b } else { a }`; declaration-time init.
implicit_hasher = "warn"                    # 1 hit manuel fix: `crates/hekadrop-core/src/resume.rs::cleanup_sweep` `&HashSet<(i64, i64)>` parametresi `<S: BuildHasher>` generic'e alındı. Tüm caller `HashSet::new()` (default RandomState) kullandığı için backward-compatible (S inferred); custom hasher passing artık mümkün.
same_functions_in_if_condition = "warn"     # 0 hit; `if foo() && foo()` aynı pure fn iki defa çağrılır — değer cache'lenmeli; davranış-kritik.
transmute_ptr_to_ptr = "warn"               # 0 hit; `transmute::<*const T, *const U>(p)` → `p.cast::<U>()`; safe pointer cast idiom.
# pedantic batch 11 — doctest / dependency / extension / docs / test-panic idiom temizliği (PR: chore/lint-pedantic-batch-11)
# 5 lint, hepsi 0 hit; davranış-koruyucu, direkt enforce (RFC-0001 sonrası strictness sweep stratejisinin 11. batch'i).
needless_doctest_main = "warn"                          # 0 hit; doctest'te `fn main()` redundant — rustdoc otomatik wrap'ler.
wildcard_dependencies = "warn"                          # 0 hit; `Cargo.toml` `version = "*"` → semver pinning gerekli; supply-chain hijyeni (workspace deps zaten explicit).
case_sensitive_file_extension_comparisons = "warn"      # 0 hit; `path.ends_with(".png")` → `Path::extension() + eq_ignore_ascii_case`; case mismatch bug. (Mevcut `OsStr::to_string_lossy().ends_with(".tmp")` Cow<str> üzerinde olduğu için lint kapsamı dışı.)
doc_lazy_continuation = "warn"                          # 0 hit; markdown list item continuation indentation tutarsızlığı.
should_panic_without_expect = "warn"                    # 0 hit; `#[should_panic]` payload eksik → `#[should_panic(expected = "...")]`; testin doğru paniği yakaladığını garanti eder.

[workspace.lints.rustdoc]
broken_intra_doc_links = "deny"
missing_crate_level_docs = "warn"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
# debug = 1 → line tables only (minimal debuginfo). Windows release build'inin
# .pdb üretmesi için gerekli; `strip = true` ile symbol table'dan arındırılsa da
# `split-debuginfo = "packed"` dbg info'yu ayrı pack'e alır ve crash/stack trace
# kalitesini yükseltir. Binary boyut maliyeti ~200 KB.
debug = 1
split-debuginfo = "packed"
