[package]
name = "hekadrop-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

# Standalone crate — workspace root'un bir parçası değil. cargo fuzz bu tabloyu
# gerektirir; aksi halde parent workspace'e dahil edilmeye çalışılır.
[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
hekadrop-core = { path = "../crates/hekadrop-core" }
hekadrop-proto = { path = "../crates/hekadrop-proto" }
prost = "0.14"
p256 = { version = "=0.14.0-rc.12", features = ["ecdh", "arithmetic"] }

[profile.release]
debug = true
opt-level = 3
overflow-checks = true

[[bin]]
name = "fuzz_ukey2_client_init"
path = "fuzz_targets/fuzz_ukey2_client_init.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_ukey2_client_finish"
path = "fuzz_targets/fuzz_ukey2_client_finish.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_frame_decode"
path = "fuzz_targets/fuzz_frame_decode.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_secure_decrypt"
path = "fuzz_targets/fuzz_secure_decrypt.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_payload_header"
path = "fuzz_targets/fuzz_payload_header.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_payload_assembler"
path = "fuzz_targets/fuzz_payload_assembler.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_chunk_hmac"
path = "fuzz_targets/fuzz_chunk_hmac.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_resume_meta"
path = "fuzz_targets/fuzz_resume_meta.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_protobuf_frames"
path = "fuzz_targets/fuzz_protobuf_frames.rs"
test = false
doc = false
bench = false

[[bin]]
name = "fuzz_endpoint_info"
path = "fuzz_targets/fuzz_endpoint_info.rs"
test = false
doc = false
bench = false
